<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimaryDark"
  tools:context=".EditCosplay">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay"
    tools:ignore="MissingConstraints">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@drawable/gradient"
      app:popupTheme="@style/AppTheme.PopupOverlay">

      <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/kalam_bold"
        android:text="@string/CosNet"
        android:textColor="@android:color/white"
        android:textSize="40sp" />


    </androidx.appcompat.widget.Toolbar>




  </com.google.android.material.appbar.AppBarLayout>

  <TextView
    android:id="@+id/textView5"
    style="@style/CustomText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="@font/lato_bold"
    android:text="@string/Due_Date"
    app:layout_constraintStart_toStartOf="@+id/startDateEditText"
    app:layout_constraintTop_toBottomOf="@+id/startDateEditText" />

  <EditText
    android:id="@+id/dueDateEditText"
    style="@style/EditText"
    android:layout_width="0dp"
    android:layout_height="24dp"
    android:layout_marginTop="8dp"
    android:focusableInTouchMode="false"
    android:fontFamily="@font/lato_bold"
    android:hint="@string/DueDateHint"
    android:importantForAutofill="no"
    android:inputType="date"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    app:layout_constraintEnd_toEndOf="@+id/characterEditText"
    app:layout_constraintStart_toStartOf="@+id/textView5"
    app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <me.abhinay.input.CurrencyEditText
    android:id="@+id/budgetEditText"
    style="@style/EditText"
    android:layout_width="0dp"
    android:layout_height="24dp"
    android:layout_marginTop="8dp"
    android:fontFamily="@font/lato_bold"
    android:hint="@string/BudgetHint"
    android:importantForAutofill="no"
    android:inputType="number"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    app:layout_constraintEnd_toEndOf="@+id/characterEditText"
    app:layout_constraintStart_toStartOf="@+id/textView6"
    app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <TextView
    android:id="@+id/textView4"
    style="@style/CustomText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="@font/lato_bold"
    android:text="@string/Start_Date"
    app:layout_constraintStart_toStartOf="@+id/seriesEditText"
    app:layout_constraintTop_toBottomOf="@+id/seriesEditText" />

  <EditText
    android:id="@+id/startDateEditText"
    style="@style/EditText"
    android:layout_width="0dp"
    android:layout_height="24dp"
    android:layout_marginTop="8dp"
    android:focusableInTouchMode="false"
    android:fontFamily="@font/lato_bold"
    android:hint="@string/StartDateHint"
    android:importantForAutofill="no"
    android:inputType="date"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    app:layout_constraintEnd_toEndOf="@+id/characterEditText"
    app:layout_constraintStart_toStartOf="@+id/textView4"
    app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <TextView
    android:id="@+id/textView3"
    style="@style/CustomText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="@font/lato_bold"
    android:text="@string/Series"
    app:layout_constraintStart_toStartOf="@+id/characterEditText"
    app:layout_constraintTop_toBottomOf="@+id/characterEditText" />

  <TextView
    android:id="@+id/textView2"
    style="@style/CustomText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="12dp"
    android:fontFamily="@font/lato_bold"
    android:text="@string/Character"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

  <EditText
    android:id="@+id/characterEditText"
    style="@style/EditText"
    android:layout_width="0dp"
    android:layout_height="27dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:autofillHints="@string/Character"
    android:fontFamily="@font/lato_bold"
    android:hint="@string/CharacterHint"
    android:inputType="text"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:text="@string/CharacterInput"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/textView2"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <EditText
    android:id="@+id/seriesEditText"
    style="@style/EditText"
    android:layout_width="0dp"
    android:layout_height="24dp"
    android:layout_marginTop="8dp"
    android:autofillHints="@string/Series"
    android:fontFamily="@font/lato_bold"
    android:hint="@string/SeriesHint"
    android:inputType="text"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    app:layout_constraintEnd_toEndOf="@+id/characterEditText"
    app:layout_constraintStart_toStartOf="@+id/textView3"
    app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <TextView
    android:id="@+id/textView6"
    style="@style/CustomText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="@font/lato_bold"
    android:text="@string/Budget"
    app:layout_constraintStart_toStartOf="@+id/dueDateEditText"
    app:layout_constraintTop_toBottomOf="@+id/dueDateEditText" />

  <TextView
    android:id="@+id/textView7"
    style="@style/CustomText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="@font/lato_bold"
    android:text="@string/Status"
    app:layout_constraintStart_toStartOf="@+id/budgetEditText"
    app:layout_constraintTop_toBottomOf="@+id/budgetEditText" />

  <Spinner
    android:id="@+id/statusSpinner"
    android:layout_width="0dp"
    android:layout_height="24dp"
    android:layout_marginTop="8dp"
    android:background="@android:color/white"
    app:layout_constraintEnd_toEndOf="@+id/characterEditText"
    app:layout_constraintStart_toStartOf="@+id/budgetEditText"
    app:layout_constraintTop_toBottomOf="@+id/textView7" />

  <Button
    android:id="@+id/SaveBtn"
    android:layout_width="160dp"
    android:layout_height="40dp"
    android:layout_marginTop="32dp"
    android:background="@drawable/roundbutton"
    android:fontFamily="@font/lato_bold"
    android:text="@string/save"
    android:textAllCaps="false"
    android:textColor="@android:color/background_light"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/statusSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>
