<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:background="@color/colorPrimaryDark"
   android:id="@+id/add_cosplay_main_layout">

   <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay"
      tools:ignore="MissingConstraints">

      <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay">

         <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/kalam_bold"
            android:text="@string/CosNet"
            android:textSize="40sp" />

         <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <ImageButton
               android:id="@+id/cancelNewCosplayBTN"
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:background="@null"
               android:contentDescription="@string/cancelButtonDesc"
               android:maxWidth="30dp"
               android:maxHeight="30dp"
               android:paddingTop="8dp"
               android:scaleType="fitCenter"
               android:src="@drawable/ic_cancel_white_18dp" />

            <Button
               android:id="@+id/addCosplayBTN"
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:background="@android:color/transparent"
               android:includeFontPadding="false"
               android:paddingTop="0dp"
               android:text="@string/Adding_plus"
               android:textAlignment="gravity"
               android:textColor="@android:color/white"
               android:textSize="40sp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>


      </androidx.appcompat.widget.Toolbar>


   </com.google.android.material.appbar.AppBarLayout>


   <TextView
      style="@style/CustomText"
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/Due_Date"
      android:labelFor="@+id/dueDateEditText"
      app:layout_constraintStart_toStartOf="@+id/startDateEditText"
      app:layout_constraintTop_toBottomOf="@+id/startDateEditText" />

   <EditText
      android:id="@+id/dueDateEditText"
      style="@style/EditText"
      android:layout_width="0dp"
      android:layout_height="24dp"
      android:layout_marginTop="8dp"
      android:autofillHints="@string/DateHint"
      android:inputType="date"
      android:hint="@string/DueDateHint"
      app:layout_constraintEnd_toEndOf="@+id/characterEditText"
      app:layout_constraintStart_toStartOf="@+id/textView5"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

   <EditText

      android:id="@+id/budgetEditText"
      style="@style/EditText"
      android:layout_width="0dp"
      android:layout_height="24dp"
      android:layout_marginTop="8dp"
      android:autofillHints="@string/BudgetAutoHint"
      android:inputType="numberDecimal"
      android:hint="@string/BudgetHint"
      app:layout_constraintEnd_toEndOf="@+id/characterEditText"
      app:layout_constraintStart_toStartOf="@+id/textView6"
      app:layout_constraintTop_toBottomOf="@+id/textView6" />

   <TextView
      style="@style/CustomText"
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/Start_Date"
      android:labelFor="@+id/startDateEditText"
      app:layout_constraintStart_toStartOf="@+id/seriesEditText"
      app:layout_constraintTop_toBottomOf="@+id/seriesEditText" />

   <EditText
      android:id="@+id/startDateEditText"
      style="@style/EditText"
      android:layout_width="0dp"
      android:layout_height="24dp"
      android:layout_marginTop="8dp"
      android:autofillHints="@string/DateHint"
      android:inputType="date"
      app:layout_constraintEnd_toEndOf="@+id/characterEditText"
      app:layout_constraintStart_toStartOf="@+id/textView4"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

   <TextView
      style="@style/CustomText"
      android:labelFor="@+id/seriesEditText"
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/Series"
      app:layout_constraintStart_toStartOf="@+id/characterEditText"
      app:layout_constraintTop_toBottomOf="@+id/characterEditText" />

   <TextView
      android:id="@+id/textView2"
      style="@style/CustomText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="12dp"
      android:text="@string/Character"
      app:layout_constraintStart_toStartOf="parent"
      android:labelFor="@+id/characterEditText"
      app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

   <EditText
      android:id="@+id/characterEditText"
      style="@style/EditText"
      android:layout_width="0dp"
      android:layout_height="27dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:autofillHints="@string/Character"
      android:inputType="text"
      android:text="@string/CharacterInput"
      android:hint="@string/CharacterHint"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/textView2"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

   <EditText
      android:id="@+id/seriesEditText"
      style="@style/EditText"
      android:layout_height="24dp"
      android:layout_width="0dp"
      android:layout_marginTop="8dp"
      android:inputType="text"
      android:text="@string/SeriesInput"
      android:hint="@string/SeriesHint"
      android:autofillHints="@string/Series"
      app:layout_constraintEnd_toEndOf="@+id/characterEditText"
      app:layout_constraintStart_toStartOf="@+id/textView3"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

   <TextView
      android:labelFor="@+id/budgetEditText"
      style="@style/CustomText"
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/Budget"
      app:layout_constraintStart_toStartOf="@+id/dueDateEditText"
      app:layout_constraintTop_toBottomOf="@+id/dueDateEditText" />

   <TextView
      style="@style/CustomText"
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/Status"
      app:layout_constraintStart_toStartOf="@+id/budgetEditText"
      app:layout_constraintTop_toBottomOf="@+id/budgetEditText" />

   <Spinner
      android:id="@+id/statusSpinner"
      android:layout_width="0dp"
      android:layout_height="24dp"
      android:layout_marginTop="8dp"
      android:background="@android:color/white"
      app:layout_constraintEnd_toEndOf="@+id/characterEditText"
      app:layout_constraintStart_toStartOf="@+id/budgetEditText"
      app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>
